<resources>
    <string name="app_name">Arrows-M</string>
    <string name="score">Score</string>
    <string name="timer">Timer</string>
    <string name="pause_button">Pause Button</string>
    <string name="play">Play</string>
    <string name="help">Help</string>
    <string name="share">Share</string>
    <string name="leader_board">Leader Board</string>
    <string name="settings">Settings</string>
    <string name="Exit">Exit</string>
    <string name="arrow_image">Arrow Image</string>
    <string name="skip_sign_in">Skip Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="pause">Pause</string>
    <string name="return_button">Return Button</string>
    <string name="music">Music</string>
    <string name="volume">Volume</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="back_to_main_menu">Back To Main Menu</string>
    <string name="your_best_score">Your Best Score</string>
    <string name="best_score">Best Score</string>
    <string name="best_game_play_time">Best Game Play Time</string>
    <string name="world_wide_top_high_score">World Wide Top High Score</string>
    <string name="name">Name</string>
    <string name="best_name">Best Name</string>
    <string name="game_result">Game Result</string>
    <string name="game_play_time">Game Play Time</string>
    <string name="share_your_score">Share your score</string>
    <string name="splash_screen_icon">Splash Screen Icon</string>
    <string name="first_instruction">Swipe the highlighted arrow direction in the given area below to match the pattern</string>
    <string name="swipe_here">Swipe Here!</string>
    <string name="second_instruction">If the swipe matched with direction, the current arrow turn green and the following arrow will highlighted and repeat the same</string>
    <string name="third_instruction">Try to match the arrows as many as you can within given time!</string>
</resources>
