<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/other_activity_background"
    tools:context=".LeaderBoardActivity">

    <ImageButton
        android:id="@+id/leader_return_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/button_background"
        android:contentDescription="@string/return_button"
        android:foreground="@drawable/back_button"
        app:layout_constraintBottom_toTopOf="@+id/bestInfo_textView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bestInfo_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/paprika"
        android:text="@string/your_best_score"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/leader_return_button" />

    <TextView
        android:id="@+id/bestScore_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/best_score"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bestInfo_textView" />

    <TextView
        android:id="@+id/bestGamePlayTime_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/best_game_play_time"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bestScore_textView" />

    <TextView
        android:id="@+id/bestWorldScoreTitle_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lemonada"
        android:text="@string/world_wide_top_high_score"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bestGamePlayTime_textView" />

    <LinearLayout
        android:id="@+id/listViewHeader_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/bestWorldScore_listView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bestWorldScoreTitle_textView">

        <TextView
            android:id="@+id/nameHeader_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorTransparent"
            android:fontFamily="@font/monoton"
            android:gravity="center"
            android:text="@string/name"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/scoreHeader_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorTransparent"
            android:fontFamily="@font/monoton"
            android:gravity="center"
            android:text="@string/score"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>



    <ListView
        android:id="@+id/bestWorldScore_listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/list_view_border"
        android:divider="@color/colorListView"
        android:dividerHeight="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewHeader_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>