<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/other_activity_background"
    tools:context=".PauseActivity">

    <ImageButton
        android:id="@+id/settings_return_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/button_background"
        android:contentDescription="@string/return_button"
        android:foreground="@drawable/back_button"
        app:layout_constraintBottom_toTopOf="@+id/pause_textView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pause_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sagittarius_normal"
        android:text="@string/pause"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/music_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_return_button" />

    <LinearLayout
        android:id="@+id/music_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toTopOf="@id/volume_layout"
        app:layout_constraintTop_toBottomOf="@+id/pause_textView" >

        <TextView
            android:id="@+id/music_textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/monoton"
            android:gravity="center"
            android:text="@string/music"
            android:textAlignment="center"
            android:textSize="30sp" />

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/pause_musicOn_radioButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/paprika"
                android:onClick="onMusicRadioButtonClicked"
                android:text="@string/on" />

            <RadioButton
                android:id="@+id/pause_musicOff_radioButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/paprika"
                android:onClick="onMusicRadioButtonClicked"
                android:text="@string/off" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/volume_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@+id/music_layout" >

        <TextView
            android:id="@+id/volume_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/monoton"
            android:gravity="center"
            android:text="@string/volume"
            android:textAlignment="center"
            android:textSize="30sp" />

        <SeekBar
            android:id="@+id/pause_volume_seekBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:foregroundGravity="center"
            android:padding="5dp"
            android:progressTint="#ED0606" />
    </LinearLayout>

    <Button
        android:id="@+id/pause_back_mainMenu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/sagittarius_normal"
        android:padding="10dp"
        android:text="@string/back_to_main_menu"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>