<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_animation"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/icon_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/gameTitle_textView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/share_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginStart="16dp"
            android:layout_weight="0"
            android:background="@color/colorTransparent"
            android:contentDescription="@string/share"
            android:foreground="@drawable/share_button"
            android:foregroundTint="#D1406D"
            android:onClick="shareApplication"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/help_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@color/colorTransparent"
            android:contentDescription="@string/help"
            android:foreground="@drawable/help_button"
            android:foregroundTint="#D85151"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="helpActivity"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/gameTitle_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorTransparent"
        android:fontFamily="@font/arrowheadlake_sunlit"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#C53D12"
        android:textSize="80sp"
        app:layout_constraintBottom_toTopOf="@+id/play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorTransparent"
        android:fontFamily="@font/sagittarius_normal"
        android:onClick="playGame"
        android:text="@string/play"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/settings_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameTitle_textView" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorTransparent"
        android:fontFamily="@font/sagittarius_normal"
        android:onClick="settingsMenu"
        android:text="@string/settings"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/leader_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_button" />

    <Button
        android:id="@+id/leader_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorTransparent"
        android:fontFamily="@font/sagittarius_normal"
        android:onClick="leaderBoardActivity"
        android:text="@string/leader_board"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/exit_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_button" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorTransparent"
        android:fontFamily="@font/sagittarius_normal"
        android:gravity="center|center_horizontal|center_vertical"
        android:onClick="exitGame"
        android:text="@string/Exit"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leader_button" />

</androidx.constraintlayout.widget.ConstraintLayout>