<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/other_activity_background"
    tools:context=".HelpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/help_return_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/button_background"
                android:contentDescription="@string/return_button"
                android:foreground="@drawable/back_button"
                app:layout_constraintBottom_toTopOf="@+id/arrow_help_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/arrow_help_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/help_return_button">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#90CF0F0F"
                    android:contentDescription="@string/arrow_image"
                    app:srcCompat="@drawable/arrow_down" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/arrow_image"
                    app:srcCompat="@drawable/arrow_right" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/arrow_image"
                    app:srcCompat="@drawable/arrow_down" />
            </LinearLayout>

            <TextView
                android:id="@+id/first_instr_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_instruction"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@id/second_instr_textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/arrow_help_layout" />

            <TextView
                android:id="@+id/second_instr_textView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="5dp"
                android:background="@drawable/swipe_view_border"
                android:gravity="center"
                android:text="@string/swipe_here"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@id/arrow_help_layout_second"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/first_instr_textView" />

            <LinearLayout
                android:id="@+id/arrow_help_layout_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@id/third_instr_textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/second_instr_textView">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#7E4CAF50"
                    android:contentDescription="@string/arrow_image"
                    app:srcCompat="@drawable/arrow_down" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#90CF0F0F"
                    android:contentDescription="@string/arrow_image"
                    app:srcCompat="@drawable/arrow_right" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/arrow_image"
                    app:srcCompat="@drawable/arrow_down" />
            </LinearLayout>

            <TextView
                android:id="@+id/third_instr_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/second_instruction"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/arrow_help_layout_second" />

            <TextView
                android:id="@+id/four_instr_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/third_instruction"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/third_instr_textView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>